# renpy-wordcount

./: .gitignore  AGENTS.md  CHECKLIST.md  CLAUDE.md  CMakeLists.txt  DECISIONS.md  PARITY-CHECKLIST.md  PLAN.md  README.md  STATUS.md
.github/workflows/: appimage.yml  ci.yml
cli-tools/: count-characters.py
cmake/: guide_content.h.in  uninstall.cmake.in
docs/: parser-behavior.md  performance.md
docs/projects/chat-program-integration/: PLAN.md  SUPPORTED-SYNTAX.md
plans/: noncoder-usability-plan.html
resources/: say-count.desktop  say-count.desktop.in  text-x-renpy.xml
resources/chat_program/: INTEGRATION.md  NOTICE  chat_program.rpy  manifest.json  say_count_chat_bridge.rpy  say_count_chat_config.rpy  say_count_chat_kik.rpy
resources/guides/: chat.html  prose.html
src/app/: git_client.cpp  git_client.h  google_drive.cpp  google_drive.h  main.cpp  nvim_client.cpp  nvim_client.h  offline_prose_runner.cpp  offline_prose_runner.h  settings.cpp  settings.h
src/core/: accessibility.cpp  accessibility.h  assets.cpp  assets.h  autocomplete.cpp  autocomplete.h  chat_dialogue_adapter.cpp  chat_dialogue_adapter.h  chat_document.h  chat_program_formatter.cpp  chat_program_formatter.h  chat_program_parser.cpp  chat_program_parser.h  chat_runtime.cpp  chat_runtime.h  cloud_save.cpp  cloud_save.h  continuity.cpp  continuity.h  count_expression.cpp  count_expression.h  coverage.cpp  coverage.h  diagnostics.cpp  diagnostics.h  editor_commands.cpp  editor_commands.h  find_replace.cpp  find_replace.h  flow_layout.cpp  flow_layout.h  git_repository.cpp  git_repository.h  indent.cpp  indent.h  manuscript.cpp  manuscript.h  navigator.cpp  navigator.h  offline_prose_ai.cpp  (+43 more)
src/ui/: asset_panel.cpp  asset_panel.h  build_scene_panel.cpp  build_scene_panel.h  chat_conversion_dialog.cpp  chat_conversion_dialog.h  cloud_save_dialog.cpp  cloud_save_dialog.h  command_button.cpp  command_button.h  command_model.cpp  command_model.h  conflict_dialog.cpp  conflict_dialog.h  coverage_panel.cpp  coverage_panel.h  diagnostics_panel.cpp  diagnostics_panel.h  editor_notebook.cpp  editor_notebook.h  flow_map_panel.cpp  flow_map_panel.h  git_dialog.cpp  git_dialog.h  guide_dialog.cpp  guide_dialog.h  main_frame.cpp  main_frame.h  main_frame_shell.cpp  manuscript_dialog.cpp  manuscript_dialog.h  outline_panel.cpp  outline_panel.h  palette_dialog.cpp  palette_dialog.h  placeholder.cpp  production_panel.cpp  production_panel.h  project_navigator_panel.cpp  project_navigator_panel.h  (+22 more)
tests/: accessibility_test.cpp  analysis_test.cpp  assets_test.cpp  autocomplete_test.cpp  chat_document_test.cpp  chat_renpy.cmake  chat_runtime_test.cpp  chat_ui_test.cpp  cloud_save_test.cpp  continuity_test.cpp  core_smoke_test.cpp  count_expression_test.cpp  coverage_test.cpp  diagnostics_test.cpp  editor_commands_test.cpp  export_test.cpp  find_replace_test.cpp  flow_layout_test.cpp  git_client_test.cpp  git_repository_test.cpp  indent_test.cpp  manuscript_test.cpp  navigator_test.cpp  nvim_client_test.cpp  outline_test.cpp  parity.cmake  parser_test.cpp  performance_benchmark.cpp  project_bundle_test.cpp  project_creation_test.cpp  project_test.cpp  prose_test.cpp  rename_test.cpp  renpy_lint_test.cpp  renpy_runtime_test.cpp  renpy_test.cpp  routes_test.cpp  script_builder_test.cpp  snapshots_test.cpp  tokenizer_test.cpp  (+6 more)
tests/fixtures/: analysis-aggregates.rpy  analysis-definitions.rpy  average-tenth.rpy  ignored-blocks.rpy  local-labels.rpy  menu-choices.rpy  monologues.rpy  simple-dialogue.rpy  warning-lint.rpy  warning-parser.rpy
tests/fixtures/characters/: defs.rpy  scene.rpy
tests/fixtures/chat_program/: LICENSE.txt  basic.rpy
tests/fixtures/chat_program/runtime_project/game/: options.rpy  script.rpy  testcases.rpy
tests/fixtures/warning-support/: gui.rpy  script.rpy
tools/: build-appimage.sh  generate-unicode-casefold.py  generate-unicode-word-ranges.mjs  parity-dump.mjs
